--- a/download/css/style.css
+++ b/download/css/style.css
@@ -1,6 +1,22 @@
 * {margin: 0; padding: 0; }
 body {
-  background: url(../img/bg-content.png) repeat top left #000;
+  background:
+    radial-gradient(black 15%, transparent 16%) 0 0,
+    radial-gradient(black 15%, transparent 16%) 8px 8px,
+    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+  background:
+    -webkit-radial-gradient(black 15%, transparent 16%) 0 0,
+    -webkit-radial-gradient(black 15%, transparent 16%) 8px 8px,
+    -webkit-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+    -webkit-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+  background:
+    -moz-radial-gradient(black 15%, transparent 16%) 0 0,
+    -moz-radial-gradient(black 15%, transparent 16%) 8px 8px,
+    -moz-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+    -moz-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+  background-color: #282828;
+  background-size: 16px 16px;
   color: #aaa;
   font: 62.5%/1 "Myriad Pro", Frutiger, "Lucida Grande", "Lucida Sans", "Lucida Sans Unicode", Verdana, sans-serif;
 }
